Fix target categories remove button misalignment
Target categories are using TagMultiselectWidget to display adapted
categories as tags. Button to remove category is misaligned because of
accidentally added margin.

--- a/modules/ui/styles/mw.cx.ui.Categories.less
+++ b/modules/ui/styles/mw.cx.ui.Categories.less
@@ -6,7 +6,7 @@
 	margin: 10px 0;
 	padding: 0;
 	border: 1px solid @colorGray12;
-	.oo-ui-buttonElement {
+	> .oo-ui-buttonWidget {
 		margin: 5px;
 	}
 }
